# personal-external-memory

./: Dockerfile  LICENSE.md  README.md  docker-compose.yml
.github/: dependabot.yml
architecture/: ARCHITECTURE.md
backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/core/: config.py  security.py
backend/app/domains/associations/: __init__.py  router.py  schemas.py  service.py
backend/app/domains/auth/: router.py  schemas.py  service.py
backend/app/domains/brands/: __init__.py  repository.py  router.py  schemas.py  service.py
backend/app/domains/contact_info/: router.py  service.py
backend/app/domains/events/: repository.py  router.py  schemas.py  service.py
backend/app/domains/external_identities/: router.py  schemas.py  service.py
backend/app/domains/immich/: router.py  schemas.py  service.py
backend/app/domains/interactions/: __init__.py  repository.py  router.py  schemas.py  service.py
backend/app/domains/locations/: router.py  schemas.py  service.py
backend/app/domains/people/: repository.py  router.py  schemas.py  service.py
backend/app/domains/relationships/: __init__.py  repository.py  router.py  schemas.py  service.py
backend/app/domains/resources/: __init__.py  router.py  schemas.py  service.py
backend/app/domains/social_circles/: repository.py  router.py  schemas.py  service.py
backend/app/domains/tags/: __init__.py  router.py  schemas.py  service.py
backend/app/domains/types/: router.py  schemas.py  service.py
backend/app/domains/user_settings/: repository.py  router.py  schemas.py  service.py
backend/app/frontend/: index.html
backend/app/frontend/assets/css/: styles.css
backend/app/frontend/assets/js/: api.js  appController.js  avatar.js  dom.js  render.js  state.js  ui.js
backend/app/frontend/assets/js/renderers/: brandsRenderer.js  calendarRenderer.js  circlesRenderer.js  common.js  dashboardRenderer.js  eventsRenderer.js  interactionsRenderer.js  locationsRenderer.js  mapRenderer.js  peopleRenderer.js  settingsRenderer.js  tagsRenderer.js  topologyRenderer.js  typesRenderer.js
backend/app/infrastructure/: database.py  dependencies.py  exceptions.py  migrations.py  models.py  repository.py
backend/migrations/: alembic.ini  env.py
backend/tests/: test_auth.py  test_user_settings.py
src/: .env.example  README.md  pyproject.toml
src/app/core/: config.py  security.py
src/app/domains/associations/: router.py  schemas.py  service.py
src/app/domains/auth/: router.py
src/app/domains/brands/: repository.py  router.py  schemas.py  service.py
src/app/domains/contact_info/: __init__.py  repository.py  router.py  schemas.py
src/app/domains/events/: __init__.py  repository.py  router.py  schemas.py  service.py
src/app/domains/external_identities/: __init__.py  repository.py  router.py
src/app/domains/immich/: __init__.py  service.py
src/app/domains/locations/: __init__.py  geocoding.py  repository.py  router.py
src/app/domains/people/: __init__.py  repository.py  router.py  service.py
src/app/domains/relationships/: repository.py  router.py  schemas.py
src/app/domains/resources/: repository.py  router.py  service.py
src/app/domains/social_circles/: __init__.py  repository.py  router.py  schemas.py  service.py
src/app/domains/tags/: repository.py  router.py
src/app/domains/types/: __init__.py
src/app/domains/user_settings/: service.py
src/app/frontend/: index.html
src/app/frontend/assets/css/: styles.css
src/app/frontend/assets/js/: api.js  app.js  appController.js  avatar.js  combobox.js  render.js  state.js
src/app/frontend/assets/js/renderers/: brandsRenderer.js  circlesRenderer.js  common.js  dashboardRenderer.js  eventsRenderer.js  locationsRenderer.js  mapRenderer.js  peopleRenderer.js  settingsRenderer.js  topologyRenderer.js
src/app/infrastructure/: dependencies.py  migrations.py  models.py  repository.py
src/tests/: conftest.py  test_relationships.py  test_user_settings.py
