[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "personal-external-memory-backend"
version = "0.1.0"
description = "Personal External Memory (PEM) - People Relationship Management System Backend"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "PEM Team"}]
license = {text = "MIT"}
keywords = ["pem", "relationship", "management", "people"]

dependencies = [
    # Core web framework
    "fastapi[standard]==0.115.0",
    "uvicorn[standard]==0.30.0",
    
    # Database
    "sqlalchemy[asyncio]==2.0.29",
    "alembic==1.13.1",
    "aiosqlite==0.20.0",
    
    # Data validation
    "pydantic==2.7.1",
    "pydantic-settings==2.2.1",
    
    # Authentication & security
    "python-jose[cryptography]==3.3.0",
    "pwdlib[argon2]>=0.2.0",
    "python-multipart>=0.0.7",
    
    # Environment variables
    "python-dotenv==1.0.1",
    
    # Utilities
    "python-dateutil==2.8.2",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest==7.4.4",
    "pytest-asyncio==0.23.3",
    "pytest-cov==4.1.0",
    "pytest-xdist==3.6.1",
    
    # Code quality
    "black==24.1.1",
    "isort==5.13.2",
    "flake8==7.0.0",
    "mypy==1.8.0",
    "pylint==3.0.3",
    
    # Development tools
    "ipython==8.20.1",
    "ipdb==0.13.13",
]

[tool.setuptools]
packages = ["app"]

[tool.black]
line-length = 100
target-version = ["py310", "py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true
multi_line_mode = 3
include_trailing_comma = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --tb=short"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
markers = [
    "asyncio: marks tests as async (deselect with '-m \"not asyncio\"')",
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/__main__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\(Protocol\\):",
    "@(abc\\.)?abstractmethod",
]
